[package]
name = "lb_ark"
version = "0.1.0"
edition = "2021"

[lib]
name = "d3dxof"
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.48.0", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",
	"Win32_Storage_FileSystem",
	"Win32_UI_WindowsAndMessaging",
] }
retour = { version = "0.3.0", features = ["static-detour", "thiscall-abi"] }
anyhow = "1.0.70"
lazy_static = "1.4.0"
memchr = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
