[package]
name = "lb_ark"
version = "1.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.48.0", features = [
	"Win32_Foundation",
	"Win32_System_LibraryLoader",

	"Win32_System_Threading",
	"Win32_System_Kernel",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_SystemServices",
	"Win32_System_SystemInformation",

	"Win32_Storage_FileSystem",
	"Win32_UI_WindowsAndMessaging",
] }
retour = { version = "0.3.0", features = ["static-detour", "thiscall-abi"] }
color-eyre = "0.6.2"
lazy_static = "1.4.0"
memchr = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error = "0.2.0"
